--- a/app/package.json
+++ b/app/package.json
@@ -59,6 +59,7 @@
     "devtron": "^1.4.0",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.2.3",
+    "react-testing-library": "^4.1.0",
     "temp": "^0.8.3",
     "webpack-hot-middleware": "^2.10.0"
   }
